# Copyright 2018 Bitwise IO, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# -----------------------------------------------------------------------------

[package]
name = "sawtooth-pbft"
version = "0.1.0"
authors = ["Bitwise IO, Inc"]
description = "PBFT consensus algorithm for Hyperledger Sawtooth"

[package.metadata.deb]
maintainer = "sawtooth"
depends = "$auto"
assets = [
    ["packaging/systemd/sawtooth-pbft.service", "/lib/systemd/system/sawtooth-pbft.service", "644"],
    ["packaging/systemd/sawtooth-pbft", "/etc/default/sawtooth-pbft", "644"],
    ["target/release/sawtooth-pbft", "/usr/bin/sawtooth-pbft", "755"]
]
maintainer-scripts = "packaging/ubuntu"

[features]
default = ["with-serde"]
with-serde = []

[dependencies]
atomicwrites = "0.2"
clap = "2.31"
hex = "0.3"
log = "0.4"
log4rs = "0.8"
log4rs-syslog = "3.0"
protobuf = { version = "2", features = ["with-serde"] }
sawtooth_sdk = { git = "https://github.com/hyperledger/sawtooth-core.git", branch = "master" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_millis = "0.1"

[patch.crates-io]
log4rs = { git = "https://github.com/ltseeley/log4rs", branch = "config-loading" }

[dev-dependencies]
rand = "0.5"
rust-crypto = "0.2"

[build-dependencies]
protoc-rust = "2"
